syntax = "proto3";

package superjcd.shopservice.v1;

option go_package = "github.com/superjcd/shopservice/genproto/v1";



service ShopService {
    rpc CreateShop(CreateShopRequest) returns (CreateShopResponse){};
    rpc ListShop(ListShopRequest) returns (ListShopResponse){};
    rpc UpdateShop(UpdateShopRequest) returns (UpdateShopResponse){};
    rpc DeleteShop(DeleteShopRequest) returns (DeleteShopResponse){};
}


enum Status {
    success = 0;
    failure = 1;
}

message Shop {
    string name = 1;
    string brand_names = 2;
    string country = 3;
    string tags = 4;
}


message CreateShopRequest {
    string name = 1;
    string brand_names = 2;
    string country = 3;
    string tags = 4;
}


message CreateShopResponse {
    string msg = 1;
    Status status = 2;    
    Shop shop = 3;
    
}

message ListShopRequest {
    repeated string names=1;
    string brand_name=2;
    string country = 3;
    string tags = 4;
    int32 offset=5;
    int32 limit=6;
}

message ListShopResponse {
    string msg=1;
    Status status = 2;
    repeated Shop shops = 3; 
}

// 原则上就应该和create
message UpdateShopRequest {
    string name = 1;
    string brand_names = 2;
    string country = 3;
    string tags= 4;
}

message UpdateShopResponse {
    string msg=1;
    Status status=2;
}

message DeleteShopRequest {
    string name=1;
}

message DeleteShopResponse {
    string msg=1;
    Status status = 2;   
}


